test/expressions/diten/uintOctalOverflow.good
uintOctalOverflow.chpl:1: syntax error: error building numeric literal: integer literal overflow: '0o2000000000000000000000' is too big for a 64-bit unsigned integer
